2007-09-16  Janne Jalkanen <jalkanen@ecyrd.com>

        * 2.5.139

        * [BUG 136]: Fixed several XSS vulnerabilities in plain.jsp,
        commonheader.jsp, GroupContent.jsp, EditGroupContent.jsp,
        InfoContent.jsp, NewGroupContent.jsp, VariableTag, UserProfileTag
        and MessagesTag.  Reported by Jason Kratzer.

        * Fixes a local path disclosure vulnerability in
        BasicAttachmentProvider.  Reported by Jason Kratzer.
        
        * Updated Finnish localization
        
        * Also fixed a number of instances of apostrophe (') use in
        localization files - better to use &#39; to avoid loads of nastiness
        with certain constructions.

2007-09-14  Juan Pablo Santos (juanpablo.santos@gmail.com)

        * 2.5.138

        * Localized Referring Pages and Current Time plugins (again, strangely enough,
        the plugins' texts were already in the resource file.). Updated
        referringpagesplugin.more localized text, it was looking for two parameters and
        the plugin uses only one.

        * Localized also Forms Plugins, JSPWikiMarkupParser, PluginContent,
        TranslatorReader and PluginManager. New localized strings:
        + CoreResources.properties
		    # JSPWikiMarkupParser
		    - markupparser.error.invalidset = Invalid SET found: {0}
		    - markupparser.error.nointerwikiref = No InterWiki reference defined in
		    		properties for Wiki called '{0}'!
		    - markupparser.error.parserfailure = Parser failed: {0}
		    - markupparser.error.javascriptattempt = Attempt to output javascript!
		+ PluginResources.properties
			# Forms Plugins
		    - formclose.noneedtoshow = (no need to show close now)
		    - forminput.namemissing = Input element is missing parameter 'name'.
		    - forminput.noneedtoshow = (no need to show input field now)
		    - formopen.missingparam = The FormOpen element is missing the '{0}'
		    		parameter.
		    - formopen.postorgetonly = Method must be either 'post' or 'get'